--- a/views/main.ejs
+++ b/views/main.ejs
@@ -88,7 +88,7 @@
             <div class="container col-xxl-8 px-4 py-5">
                 <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                     <div class="col-10 col-sm-8 col-lg-6">
-                        <img src="bootstrap-themes.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
+                        <img src="https://static.vecteezy.com/system/resources/thumbnails/008/695/917/small_2x/no-image-available-icon-simple-two-colors-template-for-no-image-or-picture-coming-soon-and-placeholder-illustration-isolated-on-white-background-vector.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
                             width="700" height="500" loading="lazy">
                     </div>
                     <div class="col-lg-6">
