fixed debug circle creation on the canvas

--- a/views/Japan.ejs
+++ b/views/Japan.ejs
@@ -226,7 +226,7 @@
     }
     
     // Run test after page loads
-    setTimeout(testCanvas, 1000);
+    // setTimeout(testCanvas, 1000);
   </script>
 
   <script
