--- a/views/main.html
+++ b/views/main.html
@@ -27,11 +27,10 @@
 
     <div id="mainDesign">
         <div id="introCircle"></div>
-        <div id="introCircleShadow"></div>
         <img id="gridDistorted" src="../images/IMG_1345.PNG" alt="distorted grid">
-        <img id="koiFish" src="../images/Screenshot 2025-11-18 at 21.37.00.png" alt="koi fish">
-        <img id="koiFish2" src="../images/Screenshot 2025-11-18 at 21.37.00.png" alt="koi fish2">
         <p id="japaneseTitle">日本語</p>
+        <p id="japaneseTitle2">Learn Japanese</p>
+        <img id="temple" src="../images/simple-buddhist-temple-silhouette-in-black-style-vector.png" alt="temple">
         <div id="mainText">
             <p>Want to improve your Japanese writing abilities with writing excersices? Join today and you also can practise your Kanji writing abilities with us.</p>
             <a>Join Now →</a>
