--- a/views/main.html
+++ b/views/main.html
@@ -32,7 +32,7 @@
         <p id="japaneseTitle2">Learn Japanese</p>
         <img id="temple" src="../images/simple-buddhist-temple-silhouette-in-black-style-vector.png" alt="temple">
         <div id="mainText">
-            <p>Want to improve your Japanese writing abilities with writing excersices? Join today and you also can practise your Kanji writing abilities with us.</p>
+            <p>Want to improve your Japanese writing abilities with writing excersices? <br> Join today and you also can practise your Kanji writing abilities with us.</p>
             <a>Join Now →</a>
         </div>
     </div>
