--- a/app/web/templates/auth/login.html
+++ b/app/web/templates/auth/login.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-    <meta charset="UTF-8">
-    <title>Login • KanjiLearn</title>
-    <link rel="stylesheet" href="/css/login.css">
-</head>
-<body class="login-body">
-<a href="/" class="back-btn">← Back</a>
+{% extends "layout.html" %}
 
-<div class="login-wrapper">
+{% block head %}
+    {{ super() }}
+    <link rel="stylesheet" href="/css/auth.css">
+{% endblock %}
+
+{% block content %}
+    <div class="login-wrapper">
     <div class="login-card">
 
         <img src="/img/temple.svg" alt="Logo" class="login-logo">
@@ -16,7 +14,10 @@
         <h2 class="login-title">Please Login</h2>
 
         <form class="login-form" action="/auth/login" method="POST">
+            {{ form.username.label }}
             {{ form.username(size=20, class_="login-input") }}
+
+            {{ form.password.label }}
             {{ form.password(size=20, class_="login-input") }}
 
             <label class="remember-me">
@@ -41,5 +42,4 @@
         </form>
     </div>
 </div>
-</body>
-</html>
+{% endblock %}
