--- a/app/web/templates/customer/courses.html
+++ b/app/web/templates/customer/courses.html
@@ -1,17 +1,11 @@
-<!doctype html>
-<html lang="tr">
-<head>
-    <meta charset="UTF-8"/>
-    <title>Writing Practice Hub</title>
-    <link rel="stylesheet" href="/css/courses.css"/>
-    <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-            integrity="sha512-HWW3kZHFQmQ8Z8M4/..."
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-    />
-</head>
+{% extends "customer/layout.html" %}
+
+{% block head %}
+    {{ super() }}
+    <link rel="stylesheet" href="/css/courses.css">
+{% endblock %}
+
+{% block content %}
 <body class="writing-body">
 <div class="logout-container">
     <button class="logout-btn">
@@ -22,7 +16,7 @@
 <!-- HERO -->
 <section class="home-hero">
     <img
-            src="../public/images/temple.svg"
+            src="/img/temple.svg"
             class="hero-temple-icon"
             alt="temple icon"
     />
@@ -71,5 +65,5 @@
         <p class="char-count">100 kanji</p>
     </div>
 </section>
-</body>
-</html>
+{% endblock %}
+
