improvement: use keras model and labels to predict the kanji. improvement: use flask cors for prediction routes. fix: Drawing offset on draw.js

--- a/app/web/templates/customer/courses.html
+++ b/app/web/templates/customer/courses.html
@@ -59,7 +59,7 @@
         <p class="desc">Learn the correct stroke order for basic kanji.</p>
 
         <div class="card-buttons">
-            <a href="{{ url_for('customer.kanji') }}" class="study-btn">✏️ Start Writing</a>
+            <a href="{{ url_for('prediction.index') }}" class="study-btn">✏️ Start Writing</a>
         </div>
 
         <p class="char-count">100 kanji</p>
