--- a/app/web/templates/layout.html
+++ b/app/web/templates/layout.html
@@ -1,7 +1,7 @@
 <!doctype html>
 
 <head>
-    <title>{% block title %}{% endblock %} - Language Learning Hub</title>
+    <title>{% block title %}{% endblock %}KanaLearn</title>
     <meta charset="UTF-8"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/variables.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
